# Health_Insurance_Claim_Processor

./: .env.debug  .gitignore  BACKEND_TESTING.md  DEBUG_GUIDE.md  Dockerfile  OCR_REMOVAL_SUMMARY.md  README.md  api_test.py  debug_run.py  debug_summary.py  docker-compose.yml  extracted_text_from_pdf_used_for_testrun.txt  main.py  pyproject.toml  quickstart.py  response.json  run.py  task  test_backend.py  test_debug.py  test_results.json  testrun.md  testrun.txt
agents/HealthInsuranceClaimProcessorAgent/: __init__.py  agent.py
agents/HealthInsuranceClaimProcessorAgent/sub_agents/BillProcessingAgent/: bill_agent.py
agents/HealthInsuranceClaimProcessorAgent/sub_agents/ClaimDataAgent/: __init__.py  claim_data_agent.py
agents/HealthInsuranceClaimProcessorAgent/sub_agents/ClaimDecisionAgent/: __init__.py  claim_decision_agent.py
agents/HealthInsuranceClaimProcessorAgent/sub_agents/DischargeProcessingAgent/: discharge_agent.py
agents/HealthInsuranceClaimProcessorAgent/sub_agents/DocumentAgent/: __init__.py  document_agent.py
agents/HealthInsuranceClaimProcessorAgent/sub_agents/ValidationAgent/: validation_agent.py
frontend/: app.js  index.html  style.css
samples/: README.md
services/: claim_processor.py  pdf_processor.py
src/health_insurance_claim_processor/: __init__.py  main.py
src/health_insurance_claim_processor/agents/: __init__.py  bill_agent.py  claim_decision_agent.py  discharge_agent.py  document_agent.py  ocr_agent.py  validation_agent.py  workflow_agent.py
src/health_insurance_claim_processor/agents/HealthInsuranceClaimProcessorAgent/: workflow_agent.py
src/health_insurance_claim_processor/agents/HealthInsuranceClaimProcessorAgent/sub_agents/BillProcessingAgent/: __init__.py  bill_agent.py
src/health_insurance_claim_processor/agents/HealthInsuranceClaimProcessorAgent/sub_agents/ClaimDataAgent/: claim_data_agent.py
src/health_insurance_claim_processor/agents/HealthInsuranceClaimProcessorAgent/sub_agents/ClaimDecisionAgent/: claim_decision_agent.py
src/health_insurance_claim_processor/agents/HealthInsuranceClaimProcessorAgent/sub_agents/DischargeProcessingAgent/: __init__.py  discharge_agent.py
src/health_insurance_claim_processor/agents/HealthInsuranceClaimProcessorAgent/sub_agents/DocumentAgent/: document_agent.py
src/health_insurance_claim_processor/agents/HealthInsuranceClaimProcessorAgent/sub_agents/ValidationAgent/: validation_agent.py
src/health_insurance_claim_processor/models/: request.py  response.py
src/health_insurance_claim_processor/services/: claim_processor.py  pdf_processor.py
src/health_insurance_claim_processor/utils/: config.py  logger.py
tests/: conftest.py  test_api.py
utils/: config.py
